k8s/jekyll-svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/http-probe: "true"        ### 设置该服务执行HTTP探测
    prometheus.io/http-probe-port: "4000"     ### 设置HTTP探测的接口
    prometheus.io/http-probe-path: "/"      ### 设置HTTP探测的地址   
  name: jekyll
  namespace: jekyll
  labels:
    app: jekyll
spec:
  type: NodePort
  ports:
  - port: 4000
    protocol: TCP
    targetPort: 4000
    nodePort: 30001
  selector:
    app: jekyll
